test/simple/typeerrors/Examples/ExprTypedExpr.hs
module ExprTypedExpr where

f = (5 :: Bool)
